<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Mort - Movie Organizer Tool</string>
    <string name="title_activity_login">Configure Connection</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_host">Host</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to list -->
    <string name="error_authentication">Authentication error</string>
    <string name="error_connection">Connection error</string>
    <string name="error_disconnected">Disconnected from server</string>
    <string name="error_sftp">Error</string>
    <string name="empty_sftp">Empty Result</string>
    <string name="closed_sftp">Connection closed</string>
    <string name="list_item_file_size">Size:
        <xliff:g id="file_size" example="157 MB">%1$s</xliff:g>
    </string>
    <string name="file_size_unknown">Unknown</string>
    <string name="copy_file_name">Copy file name</string>
    <string name="copy_file_path">Copy name with path</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Bookmark
        <xliff:g id="number" example="3">%1$d</xliff:g>
    </string>

    <!-- Strings related to details -->
    <string name="details_title">Title</string>
    <string name="details_year">Year</string>
    <string name="details_override">Edit</string>
    <string name="details_reset">Reset</string>
    <string name="details_file_name">File name</string>
    <string name="details_file_parent">File location</string>
    <string name="details_movie">Movie</string>
    <string name="details_tv_show">TV Show</string>
    <string name="details_use_parent_instead">Use folder name for search</string>
    <string name="details_create_link">Create Link</string>
    <string name="details_error_number_required">Invalid number</string>
    <string name="details_error_title_empty">Title is required</string>

    <!-- Strings related to settings -->
    <string name="prompt_movies">Movies path</string>
    <string name="prompt_tvshows">TvShows path</string>
    <string name="prompt_favorite">Quick access path</string>
    <string name="settings_error_field_required">This field is required</string>

</resources>
