<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"/>
    <TextView
        android:id="@+id/error_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/error_sftp"
        android:gravity="center"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/empty_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_sftp"
        android:gravity="center"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/closed_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/closed_sftp"
        android:gravity="center"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/item_list"
        android:name="gergelysallai.mort.android.ItemListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:context="gergelysallai.mort.android.list.ItemListActivity"
        tools:listitem="@layout/item_list_content"
        android:visibility="gone"/>
</FrameLayout>

