<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/static_textInputLayout_height"
            android:id="@+id/title_wrapper"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_title"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/static_textInputLayout_height"
            android:id="@+id/year_wrapper"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/title_wrapper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/override_toggle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/year_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_year"
                android:enabled="false"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <ToggleButton
            android:id="@+id/override_toggle"
            android:textOn="@string/details_reset"
            android:textOff="@string/details_override"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_wrapper"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/type_radio_group"
            app:layout_constraintVertical_bias="0.5"/>

        <RadioGroup
            android:id="@+id/type_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/year_wrapper"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/details_movie"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radio_tv_show"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/details_tv_show"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/file_name_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/type_radio_group">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/file_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_file_name"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/file_location_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/file_name_wrapper"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/file_location_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_file_parent"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/use_parent_instead_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/file_location_wrapper"
            android:text="@string/details_use_parent_instead"/>

        <Button
            android:text="@string/details_create_link"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/create_link"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/use_parent_instead_checkbox"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_cloud_download_black_24dp"
            android:id="@+id/floatingActionButton"
            android:layout_gravity="bottom|end"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@android:color/background_light"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>